crates/lang/tests/ui/contract/fail/trait-message-wildcard-selector.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/trait-message-wildcard-selector.rs:6:24
  |
6 |         #[ink(message, selector = _)]
  |                        ^^^^^^^^

error: wildcard selectors are only supported for inherent ink! messages or constructors, not for traits.
 --> tests/ui/contract/fail/trait-message-wildcard-selector.rs:6:24
  |
6 |         #[ink(message, selector = _)]
  |                        ^^^^^^^^

error[E0432]: unresolved import `super::foo::TraitDefinition`
  --> tests/ui/contract/fail/trait-message-wildcard-selector.rs:15:9
   |
15 |     use super::foo::TraitDefinition;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `TraitDefinition` in `foo`
